[project]
name = "comfyui-color-matcher"
description = "ComfyUI node for color matching between images using color-matcher library"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["numpy", "color-matcher"]

[project.urls]
Repository = "https://github.com/okdalto/ComfyUI-Color-Matcher"

[tool.comfy]
PublisherId = "okdalto"
DisplayName = "ComfyUI-Color-Matcher"
Icon = ""
